// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`table (isCI = false) > handles null and undefined values 1`] = `
[
  "┌────────────┬────────────┐
│ [1mName      [22m │ [1mValue     [22m │
├────────────┼────────────┤
│ Alice      │            │
│            │ Test       │
│ Bob        │            │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > handles wide characters (CJK) 1`] = `
[
  "┌────────────┬──────────────────────┐
│ [1m名前      [22m │ [1m説明                [22m │
├────────────┼──────────────────────┤
│ 太郎       │ 日本語のテスト       │
│ 花子       │ もう一つのテスト     │
└────────────┴──────────────────────┘
",
]
`;

exports[`table (isCI = false) > renders basic table with data 1`] = `
[
  "┌───────┬─────────────────┬───────┐
│ [1mID   [22m │ [1mName           [22m │ [1m  Age[22m │
├───────┼─────────────────┼───────┤
│ 1     │ Alice           │    30 │
│ 2     │ Bob             │    25 │
│ 3     │ Charlie         │    35 │
└───────┴─────────────────┴───────┘
",
]
`;

exports[`table (isCI = false) > renders empty table 1`] = `
[
  "┌────────────┬────────────┐
│ [1mName      [22m │ [1mValue     [22m │
├────────────┼────────────┤
[2m│        (no data)        │[22m
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders table with ascii border style 1`] = `
[
  "+------------+------------+
| [1mName      [22m | [1mValue     [22m |
+------------+------------+
| Test       | 123        |
+------------+------------+
",
]
`;

exports[`table (isCI = false) > renders table with custom formatters 1`] = `
[
  "┌────────────┬────────────┬────────────┐
│ [1mName      [22m │ [1m     Score[22m │ [1mStatus    [22m │
├────────────┼────────────┼────────────┤
│ Alice      │        95% │ ✓          │
│ Bob        │        78% │ ✗          │
└────────────┴────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders table with custom styles 1`] = `
[
  "┌────────────┬────────────┐
│ [1mName      [22m │ [1mStatus    [22m │
├────────────┼────────────┤
│ Alice      │ [32mactive    [39m │
│ Bob        │ [31minactive  [39m │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders table with double border style 1`] = `
[
  "╔════════════╦════════════╗
║ [1mName      [22m ║ [1mValue     [22m ║
╠════════════╬════════════╣
║ Test       ║ 123        ║
╚════════════╩════════════╝
",
]
`;

exports[`table (isCI = false) > renders table with no borders 1`] = `
[
  "[1mName      [22m [1mValue     [22m
Test       123       
",
]
`;

exports[`table (isCI = false) > renders table with rounded border style 1`] = `
[
  "╭────────────┬────────────╮
│ [1mName      [22m │ [1mValue     [22m │
├────────────┼────────────┤
│ Test       │ 123        │
╰────────────┴────────────╯
",
]
`;

exports[`table (isCI = false) > renders table with single border style 1`] = `
[
  "┌────────────┬────────────┐
│ [1mName      [22m │ [1mValue     [22m │
├────────────┼────────────┤
│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders table with text alignment 1`] = `
[
  "┌────────────┬────────────┬────────────┐
│ [1mLeft      [22m │ [1m  Center  [22m │ [1m     Right[22m │
├────────────┼────────────┼────────────┤
│ L          │     C      │          R │
└────────────┴────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders with auto width 1`] = `
[
  "┌───────┬───────────────────────┐
│ [1mShort[22m │ [1mLong                 [22m │
├───────┼───────────────────────┤
│ A     │ This is a longer text │
│ B     │ Short                 │
└───────┴───────────────────────┘
",
]
`;

exports[`table (isCI = false) > renders with content width 1`] = `
[
  "┌──────┬─────────────┐
│ [1mName[22m │ [1mDescription[22m │
├──────┼─────────────┤
│ A    │ First       │
│ BB   │ Second item │
│ CCC  │ Third       │
└──────┴─────────────┘
",
]
`;

exports[`table (isCI = false) > renders with header styling 1`] = `
[
  "┌────────────┬────────────┐
│ [36mName      [39m │ [36mValue     [39m │
├────────────┼────────────┤
│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders without header 1`] = `
[
  "│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > truncates long text with ellipsis 1`] = `
[
  "┌─────────────────┐
│ [1mText           [22m │
├─────────────────┤
│ This is a ve... │
└─────────────────┘
",
]
`;

exports[`table (isCI = true) > handles null and undefined values 1`] = `
[
  "┌────────────┬────────────┐
│ [1mName      [22m │ [1mValue     [22m │
├────────────┼────────────┤
│ Alice      │            │
│            │ Test       │
│ Bob        │            │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > handles wide characters (CJK) 1`] = `
[
  "┌────────────┬──────────────────────┐
│ [1m名前      [22m │ [1m説明                [22m │
├────────────┼──────────────────────┤
│ 太郎       │ 日本語のテスト       │
│ 花子       │ もう一つのテスト     │
└────────────┴──────────────────────┘
",
]
`;

exports[`table (isCI = true) > renders basic table with data 1`] = `
[
  "┌───────┬─────────────────┬───────┐
│ [1mID   [22m │ [1mName           [22m │ [1m  Age[22m │
├───────┼─────────────────┼───────┤
│ 1     │ Alice           │    30 │
│ 2     │ Bob             │    25 │
│ 3     │ Charlie         │    35 │
└───────┴─────────────────┴───────┘
",
]
`;

exports[`table (isCI = true) > renders empty table 1`] = `
[
  "┌────────────┬────────────┐
│ [1mName      [22m │ [1mValue     [22m │
├────────────┼────────────┤
[2m│        (no data)        │[22m
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders table with ascii border style 1`] = `
[
  "+------------+------------+
| [1mName      [22m | [1mValue     [22m |
+------------+------------+
| Test       | 123        |
+------------+------------+
",
]
`;

exports[`table (isCI = true) > renders table with custom formatters 1`] = `
[
  "┌────────────┬────────────┬────────────┐
│ [1mName      [22m │ [1m     Score[22m │ [1mStatus    [22m │
├────────────┼────────────┼────────────┤
│ Alice      │        95% │ ✓          │
│ Bob        │        78% │ ✗          │
└────────────┴────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders table with custom styles 1`] = `
[
  "┌────────────┬────────────┐
│ [1mName      [22m │ [1mStatus    [22m │
├────────────┼────────────┤
│ Alice      │ [32mactive    [39m │
│ Bob        │ [31minactive  [39m │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders table with double border style 1`] = `
[
  "╔════════════╦════════════╗
║ [1mName      [22m ║ [1mValue     [22m ║
╠════════════╬════════════╣
║ Test       ║ 123        ║
╚════════════╩════════════╝
",
]
`;

exports[`table (isCI = true) > renders table with no borders 1`] = `
[
  "[1mName      [22m [1mValue     [22m
Test       123       
",
]
`;

exports[`table (isCI = true) > renders table with rounded border style 1`] = `
[
  "╭────────────┬────────────╮
│ [1mName      [22m │ [1mValue     [22m │
├────────────┼────────────┤
│ Test       │ 123        │
╰────────────┴────────────╯
",
]
`;

exports[`table (isCI = true) > renders table with single border style 1`] = `
[
  "┌────────────┬────────────┐
│ [1mName      [22m │ [1mValue     [22m │
├────────────┼────────────┤
│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders table with text alignment 1`] = `
[
  "┌────────────┬────────────┬────────────┐
│ [1mLeft      [22m │ [1m  Center  [22m │ [1m     Right[22m │
├────────────┼────────────┼────────────┤
│ L          │     C      │          R │
└────────────┴────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders with auto width 1`] = `
[
  "┌───────┬───────────────────────┐
│ [1mShort[22m │ [1mLong                 [22m │
├───────┼───────────────────────┤
│ A     │ This is a longer text │
│ B     │ Short                 │
└───────┴───────────────────────┘
",
]
`;

exports[`table (isCI = true) > renders with content width 1`] = `
[
  "┌──────┬─────────────┐
│ [1mName[22m │ [1mDescription[22m │
├──────┼─────────────┤
│ A    │ First       │
│ BB   │ Second item │
│ CCC  │ Third       │
└──────┴─────────────┘
",
]
`;

exports[`table (isCI = true) > renders with header styling 1`] = `
[
  "┌────────────┬────────────┐
│ [36mName      [39m │ [36mValue     [39m │
├────────────┼────────────┤
│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders without header 1`] = `
[
  "│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > truncates long text with ellipsis 1`] = `
[
  "┌─────────────────┐
│ [1mText           [22m │
├─────────────────┤
│ This is a ve... │
└─────────────────┘
",
]
`;
